--- a/style.css
+++ b/style.css
@@ -65,6 +65,8 @@
 			justify-items  : center;
 			z-index        : 1000;
 			width          : 100%;
+			max-height.    : 90vh;
+			overflow       : scroll;
 		}
 
 		#scoreboard {
