--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 			margin     : 0;
 			font-family: Roboto;
 			overflow   : hidden;
-			background: black;
+			background : black;
 		}
 
 		h1,
@@ -44,6 +44,14 @@
 			background-color: rgb(194, 194, 194);
 		}
 
+		.btn-transparent {
+			opacity: .5;
+		}
+
+		.btn-transparent:hover {
+			opacity: 1;
+		}
+
 		.table td {
 			padding  : 10px;
 			font-size: 30px;
@@ -65,6 +73,8 @@
 			justify-items  : center;
 			z-index        : 1000;
 			width          : 100%;
+			height         : 100vh;
+			overflow       : auto;
 		}
 
 		#scoreboard {
